<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/color_mostly_black_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:drawablePadding="@dimen/padding_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_small"
            android:text="@string/edit"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/padding_medium"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:drawablePadding="@dimen/padding_medium"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_small"
            android:text="@string/delete"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"/>


    </LinearLayout>
</RelativeLayout>