<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="item"
            type="project.doxuanvinh.usermaster.data.entity.test.User" />
    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7.5"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@{item.name}"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <FrameLayout
                android:id="@+id/layout_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/padding_medium"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_menu" />

            </FrameLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>