...
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large" />

            <ImageView
                android:id="@+id/img_add"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/padding_xlarge"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_input_add" />
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            bind:onRefresh="@{viewModel}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scrollbars="vertical"
                bind:recyclerViewModel="@{viewModel}" />
        </android.support.v4.widget.SwipeRefreshLayout>
...
