...
            android:padding="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:background="@drawable/shape_border_view"
...
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/padding_xsmall"
                android:layout_weight="1"
                android:background="@drawable/shape_border_left"
                android:gravity="center"
...
